// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hasChanged with float > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "hasChanged",
      },
    ],
    "instruction": "module",
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "input",
      },
    ],
    "instruction": "float",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 2,
    "lineNumberBeforeMacroExpansion": 2,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "int",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 3,
    "lineNumberBeforeMacroExpansion": 3,
  },
  {
    "arguments": [
      {
        "isEndAddress": false,
        "referenceKind": "memory-reference",
        "scope": "local",
        "targetMemoryId": "output",
        "type": "identifier",
        "value": "&output",
      },
    ],
    "instruction": "push",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 5,
    "lineNumberBeforeMacroExpansion": 5,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "input",
      },
    ],
    "instruction": "push",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 6,
    "lineNumberBeforeMacroExpansion": 6,
  },
  {
    "arguments": [],
    "instruction": "hasChanged",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 7,
    "lineNumberBeforeMacroExpansion": 7,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "int",
      },
    ],
    "instruction": "if",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 8,
    "lineNumberBeforeMacroExpansion": 8,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": 1,
      },
    ],
    "instruction": "push",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 9,
    "lineNumberBeforeMacroExpansion": 9,
  },
  {
    "arguments": [],
    "instruction": "else",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 10,
    "lineNumberBeforeMacroExpansion": 10,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": 0,
      },
    ],
    "instruction": "push",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 11,
    "lineNumberBeforeMacroExpansion": 11,
  },
  {
    "arguments": [],
    "instruction": "ifEnd",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 12,
    "lineNumberBeforeMacroExpansion": 12,
  },
  {
    "arguments": [],
    "instruction": "store",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 13,
    "lineNumberBeforeMacroExpansion": 13,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 15,
    "lineNumberBeforeMacroExpansion": 15,
  },
]
`;

exports[`hasChanged with float > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    (local f32)
    i32.const 4
    i32.const 0
    f32.load
    local.set 0
    i32.const 8
    f32.load
    local.get 0
    f32.eq
    i32.eqz
    i32.const 8
    local.get 0
    f32.store
    if (result i32)  ;; label = @1
      i32.const 1
    else
      i32.const 0
    end
    i32.store)
  (export "test" (func 0)))
"
`;

exports[`hasChanged with float > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "input": {
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "id": "input",
    "isInteger": false,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "float",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
}
`;

exports[`hasChanged with int > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "hasChanged",
      },
    ],
    "instruction": "module",
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "input",
      },
    ],
    "instruction": "int",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 2,
    "lineNumberBeforeMacroExpansion": 2,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "int",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 3,
    "lineNumberBeforeMacroExpansion": 3,
  },
  {
    "arguments": [
      {
        "isEndAddress": false,
        "referenceKind": "memory-reference",
        "scope": "local",
        "targetMemoryId": "output",
        "type": "identifier",
        "value": "&output",
      },
    ],
    "instruction": "push",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 5,
    "lineNumberBeforeMacroExpansion": 5,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "input",
      },
    ],
    "instruction": "push",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 6,
    "lineNumberBeforeMacroExpansion": 6,
  },
  {
    "arguments": [],
    "instruction": "hasChanged",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 7,
    "lineNumberBeforeMacroExpansion": 7,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "int",
      },
    ],
    "instruction": "if",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 8,
    "lineNumberBeforeMacroExpansion": 8,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": 1,
      },
    ],
    "instruction": "push",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 9,
    "lineNumberBeforeMacroExpansion": 9,
  },
  {
    "arguments": [],
    "instruction": "else",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 10,
    "lineNumberBeforeMacroExpansion": 10,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": 0,
      },
    ],
    "instruction": "push",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 11,
    "lineNumberBeforeMacroExpansion": 11,
  },
  {
    "arguments": [],
    "instruction": "ifEnd",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 12,
    "lineNumberBeforeMacroExpansion": 12,
  },
  {
    "arguments": [],
    "instruction": "store",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 13,
    "lineNumberBeforeMacroExpansion": 13,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 15,
    "lineNumberBeforeMacroExpansion": 15,
  },
]
`;

exports[`hasChanged with int > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    (local i32)
    i32.const 4
    i32.const 0
    i32.load
    local.set 0
    i32.const 8
    i32.load
    local.get 0
    i32.eq
    i32.eqz
    i32.const 8
    local.get 0
    i32.store
    if (result i32)  ;; label = @1
      i32.const 1
    else
      i32.const 0
    end
    i32.store)
  (export "test" (func 0)))
"
`;

exports[`hasChanged with int > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "input": {
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "id": "input",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
}
`;
